--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,52 @@
-<h2>Best deals</h2>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+   <form action="/" method="post">
+   <div class="userInput">
+         <label for="shop"> Enter amount here:</label>
+         <input type="text" id="shop" name="amountVal" value="" class="shop">
+         <button type="submit" onclick="myFunction()">Add</button>
+      </div>
+      <div class="top5">
+         <div class="avos1">
+            <h2>Wolwol</h2>
+            <span>{{Wolwol}}</span>
+         </div>
+         <div class="avos2">
+            <h2>Shopryte</h2>
+            <span>{{Shopryte}}</span>
+         </div>
+         <div class="avos3">
+            <h2>Tsjekkers</h2>
+            <span>{{Tsjekkers}}</span>
+         </div>
+         <div class="avos4">
+            <h2>Pick n Play</h2>
+            <span>{{Pick}}</span>
+         </div>
+         <div class="avos5">
+            <img src="" alt="">
+            <h2>fruit lovers</h2>
+            <span>{{fruitl}}</span>
+         </div>
+      </div><br><br>
+
+
+   
+   </form>
+    
+
+
+  
+   </body>
+
+</html>
