--- a/public/style.css
+++ b/public/style.css
@@ -8,3 +8,100 @@ body {
 	margin: auto;
 	width: 80%;
 }
+
+.userInput{
+	float: center;
+}
+
+.top5 {
+	display: grid;
+	grid-template-columns: 20% 20% 20%;
+	grid-gap: 3%;
+	background-image: url(screenshoot-from-2021-11-23-16-.png);
+}
+
+.avo1 {
+	background-color: rgb(154, 232, 156);
+	margin: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.avo2 {
+	background-color: rgb(154, 232, 156);
+	margin: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.avo3 {
+	background-color: rgb(154, 232, 156);
+	margin: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.avo4 {
+	background-color: rgb(154, 232, 156);
+	margin: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+.avo5 {
+	background-color: rgb(154, 232, 156);
+	margin: 10px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.dropbtn {
+	background-color: #04AA6D;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+	background-color: #3e8e41;
+  }
+  
+  #myInput {
+	box-sizing: border-box;
+	background-image: url('searchicon.png');
+	background-position: 14px 12px;
+	background-repeat: no-repeat;
+	font-size: 16px;
+	padding: 14px 20px 12px 45px;
+	border: none;
+	border-bottom: 1px solid #ddd;
+  }
+  
+  #myInput:focus {outline: 3px solid #ddd;}
+  
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f6f6f6;
+	min-width: 230px;
+	overflow: auto;
+	border: 1px solid #ddd;
+	z-index: 1;
+  }
+  
+  .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+
+
+
